--- a/deployment/k8s/texera-helmchart/templates/workflow-computing-unit-manager-deployment.yaml
+++ b/deployment/k8s/texera-helmchart/templates/workflow-computing-unit-manager-deployment.yaml
@@ -58,6 +58,8 @@ spec:
             # FileService Access
             - name: FILE_SERVICE_GET_PRESIGNED_URL_ENDPOINT
               value: http://{{ .Values.fileService.name }}-svc:9092/api/dataset/presign-download
+            - name: FILE_SERVICE_LIST_DIRECTORY_OBJECTS_ENDPOINT
+              value: http://{{ .Values.fileService.name }}-svc:9092/api/dataset/list-directory-objects
             - name: FILE_SERVICE_UPLOAD_ONE_FILE_TO_DATASET_ENDPOINT
               value: http://{{ .Values.fileService.name }}-svc:9092/api/dataset/did/upload
             # LakeFS Access (should be removed in production environment)
