fix(ci): update backend file patterns in labeler.yml (#3815)
Let all rules to be matched for backend label.

---------

Signed-off-by: Yicong Huang <17627829+Yicong-Huang@users.noreply.github.com>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -20,13 +20,15 @@ gui:
           - 'core/gui/**'
 
 backend:
-  - changed-files:
-      - any-glob-to-any-file:
-          - 'core/**'
-      - all-globs-to-all-files:
-          - '!core/gui/**'
-          - '!core/log/**'
-          - '!core/scripts/**'
+  - all:
+      - changed-files:
+          - any-glob-to-any-file:
+              - 'core/**'
+          - all-globs-to-all-files:
+              - '!core/gui/**'
+              - '!core/log/**'
+              - '!core/scripts/**'
+
 engine:
   - changed-files:
       - any-glob-to-any-file:
