--- a/.github/ISSUE_TEMPLATE/bug-template.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-template.yaml
@@ -45,10 +45,19 @@ body:
       label: Version
       description: What version of Texera are you running?
       options:
-        - 1.0.0 (Default)
+        - 1.1.0-incubating (Pre-release/Master)
+        - 1.0.0
       default: 0
     validations:
       required: true
+  - type: input
+    id: commit-hash
+    attributes:
+      label: Commit Hash (Optional)
+      description: If you know the specific commit that has the issue, please provide the commit hash here.
+      placeholder: e.g., a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0
+    validations:
+      required: false
   - type: dropdown
     id: browsers
     attributes:
