--- a/core/config/src/main/resources/storage.conf
+++ b/core/config/src/main/resources/storage.conf
@@ -125,6 +125,12 @@ storage {
         url = "jdbc:postgresql://localhost:5432/texera_db?currentSchema=texera_db,public"
         url = ${?STORAGE_JDBC_URL}
 
+        # Some e2e test cases require the user system. To make sure running those test cases can pass the CI, and that
+        # running them locally do not contaminate developers' own texera_db, we use another database with a different
+        # name for running these test cases.
+        url-for-test-cases = "jdbc:postgresql://localhost:5432/texera_db_for_test_cases?currentSchema=texera_db,public"
+        url-for-test-cases = ${?STORAGE_JDBC_URL_FOR_TEST_CASES}
+
         username = "postgres"
         username = ${?STORAGE_JDBC_USERNAME}
 
