--- a/core/config/src/main/resources/user-system.conf
+++ b/core/config/src/main/resources/user-system.conf
@@ -17,7 +17,7 @@
 
 # See PR https://github.com/Texera/texera/pull/3326 for configuration guidelines.
 user-sys {
-  enabled = false
+  enabled = true
   enabled = ${?USER_SYS_ENABLED}
 
   admin-username = "texera"
