feat(access-control-service): add `access-control-service` to authorize the requests to `/wsapi` and `Computing Unit` endpoints (#3598)
## Access Control Service
This service is currently used only by envoy as authorization service.
It act as a third party service to authorize any request sent to the
computing unit to get socket connection through `/wsapi`. It parses the
`user-token` from URL parameters and then check user access to the
computing unit by checking the database and add the corresponding
information to the following headers:
- x-user-cu-access
- x-user-id
- x-user-name
- x-user-email
If the service can not parse the token or fail for any reason, the
access to computing unit is denied by envoy. If the authorization
succeed, the user is directly connected to computing unit using
`Upgrade` on the first `HTTP` handshake request so the latency will not
change.

## The new connection flow 

<img width="1282" height="577"
alt="489656839-e09b06ee-3915-4c18-9584-e880bc06011d"
src="https://github.com/user-attachments/assets/f7b0d29e-f30b-4e7f-9a0d-966f52d8d48a"
/>


1. A user initiates an `HTTP` request to connect to a specific Computing
Unit.
2.  The request is first routed through the **Gateway** to **Envoy**.
3. Envoy pauses the request and sends a query to the **Access Control
Service** to get an authorization decision.
4. The Access Control Service verifies the user's token and checks a
PostgreSQL database to see if the user has the necessary permissions for
the target Computing Unit.
5. **If authorized**, the service injects specific HTTP headers
(`x-user-cu-access`, `x-user-id`, `x-user-name`) into the request and
sends an approval back to Envoy.
6.  Envoy then forwards the approved request to the Computing Unit.
7. The connection is then upgraded to a WebSocket, establishing a
secure, interactive session.

If authorization fails at any point, Envoy immediately denies the
connection request, and the user is prevented from accessing the
Computing Unit. Thi

--- a/deployment/k8s/texera-helmchart/templates/envoy-config.yaml
+++ b/deployment/k8s/texera-helmchart/templates/envoy-config.yaml
@@ -63,6 +63,28 @@ data:
                                 prefix_rewrite: "/api/executions/result/export"
                                 timeout: "0s"
                     http_filters:
+                      - name: envoy.filters.http.ext_authz
+                        typed_config:
+                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
+                          http_service:
+                            server_uri:
+                              uri: http://{{ .Release.Name }}-{{ .Values.accessControlService.name }}-svc.{{ .Release.Namespace }}.svc.cluster.local
+                              cluster: access_control_service_cluster
+                              timeout: 5s
+                            path_prefix: /api/auth
+                            authorization_request:
+                              allowed_headers:
+                                patterns:
+                                  - exact: "authorization"
+                                  - exact: "x-envoy-original-path"
+                            authorization_response:
+                              allowed_upstream_headers:
+                                patterns:
+                                  - exact: "x-user-cu-access"
+                                  - exact: "x-user-id"
+                                  - exact: "x-user-name"
+                                  - exact: "x-user-email"
+                          failure_mode_allow: false
                       - name: envoy.filters.http.lua
                         typed_config:
                           "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
@@ -90,6 +112,9 @@ data:
                       - name: envoy.access_loggers.stdout
                         typed_config:
                           "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
+                          log_format:
+                            text_format_source:
+                              inline_string: "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" AuthHeaders[user-id:\"%REQ(X-USER-ID)%\" email:\"%REQ(X-USER-EMAIL)%\" cu-access:\"%REQ(X-USER-CU-ACCESS)%\"]\n"
 
       clusters:
         - name: dynamic_service
@@ -103,3 +128,16 @@ data:
                 name: dynamic_dns_cache
                 dns_lookup_family: V4_ONLY
                 dns_refresh_rate: 1s
+        - name: access_control_service_cluster # The Access Control Service authorize requests and add user info headers
+          connect_timeout: 0.25s
+          type: LOGICAL_DNS
+          lb_policy: round_robin
+          load_assignment:
+            cluster_name: access_control_service_cluster
+            endpoints:
+              - lb_endpoints:
+                  - endpoint:
+                      address:
+                        socket_address:
+                          address: {{ .Release.Name }}-{{ .Values.accessControlService.name }}-svc.{{ .Release.Namespace }}.svc.cluster.local.
+                          port_value: {{ .Values.accessControlService.service.port }}
