--- a/deployment/k8s/texera-helmchart/values.yaml
+++ b/deployment/k8s/texera-helmchart/values.yaml
@@ -157,6 +157,14 @@ configService:
     type: ClusterIP
     port: 9094
 
+accessControlService:
+  name: access-control-service
+  numOfPods: 1
+  imageName: texera/access-control-service:cluster
+  service:
+    type: ClusterIP
+    port: 9096
+
 # Configs of the envoy proxy, used to routerequests to the computing units
 envoy:
   replicas: 1
