chore: relocate root project build out from core (#3852)
According to the reorganization plan #3846, we want to move components
(such as services) out from `core/` to be in root. This PR is the firs
step to do so by declaring the sbt project in root. To reduce the name
`Core`, this PR also renames the root project to `Texera`. This can also
better align with our future release name.

resolves #3854

--- a/.github/workflows/github-action-build.yml
+++ b/.github/workflows/github-action-build.yml
@@ -107,7 +107,7 @@ jobs:
         with:
           extraSbtFiles: '["core/*.sbt", "core/project/**.{scala,sbt}", "core/project/build.properties" ]'
       - name: Lint with scalafmt
-        run: cd core && sbt scalafmtCheckAll
+        run: sbt scalafmtCheckAll
       - name: Create Databases
         run: |
           psql -h localhost -U postgres -f core/scripts/sql/texera_ddl.sql
@@ -120,9 +120,9 @@ jobs:
         env:
           PGPASSWORD: postgres
       - name: Compile with sbt
-        run: cd core && sbt clean package
+        run: sbt clean package
       - name: Run backend tests
-        run: cd core && sbt test
+        run: sbt test
 
   python_udf:
     strategy:
