--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -27,6 +27,10 @@ backend:
           - all-globs-to-all-files:
               - '!core/log/**'
               - '!core/scripts/**'
+service:
+  - changed-files:
+      - any-glob-to-any-file:
+          - '*-service/**'
 
 engine:
   - changed-files:
