chore: relocate `core/pyright-language-server` and rename it to `pyright-language-service` (#3875)
According to the reorganization plan #3846. This PR moves
`core/pyright-language-server` out to root. We also rename it to
`pyright-language-service` to be consistent with other services.

resolves #3859

---------

Signed-off-by: Yicong Huang <17627829+Yicong-Huang@users.noreply.github.com>

--- a/pyright-language-service/package.json
+++ b/pyright-language-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pyright-language-server",
+  "name": "pyright-language-service",
   "version": "0.0.1",
   "main": "src/main.ts",
   "license": "Apache-2.0",
