chore: rename `core/scripts` to `bin` (#3877)
According to the reorganization plan #3846. This PR moves `core/scripts`
out to root, and rename it to `bin`. This folder will contain all
executable scripts and binaries.

resolves #3862

---------

Signed-off-by: Yicong Huang <17627829+Yicong-Huang@users.noreply.github.com>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -26,7 +26,6 @@ backend:
               - 'core/**'
           - all-globs-to-all-files:
               - '!core/log/**'
-              - '!core/scripts/**'
 service:
   - changed-files:
       - any-glob-to-any-file:
@@ -59,7 +58,7 @@ ci:
 build:
   - changed-files:
       - any-glob-to-any-file:
-          - 'core/scripts/**'
+          - 'bin/**'
           - 'deployment/**'
 
 dependencies:
