fix: use `logs/` for all services (#3887)
We have been using a mixed of `logs/`, `../log/` and `log/` to store
logs. This PR unifies them to use `logs/` directory.

follows up on #3879

--- a/amber/src/main/resources/computing-unit-master-config.yml
+++ b/amber/src/main/resources/computing-unit-master-config.yml
@@ -40,7 +40,7 @@ logging:
     - type: console
       logFormat: "[%date{ISO8601}] [%level] [%logger] [%thread] - %msg %n"
     - type: file
-      currentLogFilename: ../log/computing-unit-master.log
+      currentLogFilename: logs/computing-unit-master.log
       threshold: ALL
       queueSize: 512
       discardingThreshold: 0
