--- a/common/config/src/main/resources/application.conf
+++ b/common/config/src/main/resources/application.conf
@@ -94,7 +94,7 @@ web-server {
 fault-tolerance {
     # URI for storage, empty to disable logging.
     # Use absolute path only. for local file system, $AMBER_FOLDER will be interpolated to Amber folder path.
-    # e.g. use "file://$AMBER_FOLDER/../log/recovery-logs/" for local logging.
+    # e.g. use "file://$AMBER_FOLDER/logs/recovery-logs/" for local logging.
     log-storage-uri = ""
     log-storage-uri = ${?FAULT_TOLERANCE_LOG_STORAGE_URI}
 
