fix(deployment): add image tag for MinIO image in helm chart (#3903)
This PR is the same as #3843 which is now based on the re-org we did on
Oct 12.
Bitnami has moved some of its images to bitnamilegacy as they are moving
to a closed source system and currently our k8s setup fail because it
can not find `MinIO` image in the main repository.
Comments on previous PR and response to them:
- How about the other places like
deployment/postgres17-pgroonga.dockerfile? they kept Postgres in their
[official repository](https://hub.docker.com/r/bitnami/postgresql), in
the description they provided, they are not maintaining it and basically
just provide the image of latest version.

--- a/bin/k8s/values.yaml
+++ b/bin/k8s/values.yaml
@@ -58,6 +58,9 @@ postgresql:
 
 minio:
   mode: standalone
+  image:
+    repository: bitnamilegacy/minio
+    tag: 2025.3.12-debian-12-r0
   customIngress:
     enabled: false
     ingressClassName: "" # e.g., "nginx"
