--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -16,6 +16,7 @@ header:
     - 'NOTICE'
     - '.dockerignore'
     - '.gitattributes'
+    - '.github/PULL_REQUEST_TEMPLATE'
     - 'yarn.lock'
     - '.nvmrc'
     - '.htaccess'
