--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
   "private": true,
   "dependencies": {
     "@abacritt/angularx-social-login": "2.3.0",
+    "@ai-sdk/openai": "2.0.52",
     "@ali-hm/angular-tree-component": "12.0.5",
     "@angular/animations": "16.2.12",
     "@angular/cdk": "16.2.12",
@@ -39,6 +40,8 @@
     "@codingame/monaco-vscode-r-default-extension": "8.0.4",
     "@loaders.gl/core": "3.4.2",
     "@luma.gl/core": "8.5.20",
+    "@mastra/core": "0.21.1",
+    "@mastra/mcp": "0.13.5",
     "@ngneat/until-destroy": "8.1.4",
     "@ngx-formly/core": "6.3.12",
     "@ngx-formly/ng-zorro-antd": "6.3.12",
@@ -127,6 +130,7 @@
     "@types/quill": "2.0.9",
     "@types/uuid": "8.3.4",
     "@types/validator": "13.12.0",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "7.0.2",
     "@typescript-eslint/parser": "7.0.2",
     "babel-plugin-dynamic-import-node": "2.3.3",
