finish end2end v1

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,14 +40,14 @@
     "@codingame/monaco-vscode-r-default-extension": "8.0.4",
     "@loaders.gl/core": "3.4.2",
     "@luma.gl/core": "8.5.20",
-    "@mastra/core": "0.21.1",
-    "@mastra/mcp": "0.13.5",
+    "@modelcontextprotocol/sdk": "^1.20.1",
     "@ngneat/until-destroy": "8.1.4",
     "@ngx-formly/core": "6.3.12",
     "@ngx-formly/ng-zorro-antd": "6.3.12",
     "@stoplight/json-ref-resolver": "3.1.5",
     "@types/lodash-es": "4.17.4",
     "@types/plotly.js-basic-dist-min": "2.12.4",
+    "ai": "^5.0.76",
     "ajv": "8.10.0",
     "backbone": "1.4.1",
     "concaveman": "2.0.0",
@@ -97,6 +97,7 @@
     "y-quill": "0.1.5",
     "y-websocket": "1.4.0",
     "yjs": "13.5.41",
+    "zod": "^3.25.76",
     "zone.js": "0.13.0"
   },
   "resolutions": {
