chore(ci): add CI with new names (#3941)
### What changes were proposed in this PR?
This PR adds the following CI with new names:
- `core` -> `scala`, currently contains all scala tests for multiple
packages/services, we could do more separation and renaming later.
-  `gui` -> `frontend`, that is consistent to our repo directory rename.
- `python_udf` -> `python`, to simplify and re-purpose, because it
contains tests for entire python engine (although a main part is to
support UDF).

Note that we will remove the old CIs in another PR.

### Any related issues, documentation, discussions?
work related to #3939 

### How was this PR tested?
Manually tested with #3937.

### Was this PR authored or co-authored using generative AI tooling?
No.

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -67,14 +67,14 @@ github:
         strict: true
         # contexts are the names of checks that must pass
         contexts:
-          - gui (ubuntu-latest, 18)
-          - gui (windows-latest, 18)
-          - gui (macos-latest, 18)
-          - core (ubuntu-22.04, 11)
-          - python_udf (ubuntu-latest, 3.9)
-          - python_udf (ubuntu-latest, 3.10)
-          - python_udf (ubuntu-latest, 3.11)
-          - python_udf (ubuntu-latest, 3.12)
+          - frontend (ubuntu-latest, 18)
+          - frontend (windows-latest, 18)
+          - frontend (macos-latest, 18)
+          - scala (ubuntu-22.04, 11)
+          - python (ubuntu-latest, 3.9)
+          - python (ubuntu-latest, 3.10)
+          - python (ubuntu-latest, 3.11)
+          - python (ubuntu-latest, 3.12)
           - Check License Headers
           - Validate PR title
       required_pull_request_reviews:
