chore: redirect GitHub emails (#3932)
### What changes were proposed in this PR?
As our dev@texera.apache.org is being swapped by GitHub automated sync
emails, we decided to redirect the traffic to
notifications@texera.apache.org.

### Any related issues, documentation, discussions?
Mail list discussion:
https://lists.apache.org/thread/5rby1jms8hpc92mkkkkzlsyds0dfxtwn

### How was this PR tested?
N/A

### Was this PR authored or co-authored using generative AI tooling?
No.

Signed-off-by: Yicong Huang <17627829+Yicong-Huang@users.noreply.github.com>

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -107,7 +107,7 @@ github:
 
 notifications:
   commits:              commits@texera.apache.org
-  issues:               dev@texera.apache.org
-  pullrequests:         dev@texera.apache.org
-  discussions:          dev@texera.apache.org
+  issues:               notifications@texera.apache.org
+  pullrequests:         notifications@texera.apache.org
+  discussions:          notifications@texera.apache.org
   jobs:                 commits@texera.apache.org
