feat(gui): show region layer on workflow editor (#3753)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,9 @@
     "@types/plotly.js-basic-dist-min": "2.12.4",
     "ajv": "8.10.0",
     "backbone": "1.4.1",
+    "concaveman": "2.0.0",
     "content-disposition": "0.5.4",
+    "d3": "6.4.0",
     "dagre": "0.8.5",
     "deep-map": "2.0.0",
     "edit-distance": "1.0.4",
@@ -111,7 +113,9 @@
     "@nrwl/nx-cloud": "19.1.0",
     "@nx/angular": "20.0.3",
     "@types/backbone": "1.4.15",
+    "@types/concaveman": "1.1.6",
     "@types/content-disposition": "0",
+    "@types/d3-shape": "2.1.2",
     "@types/dagre": "0.7.47",
     "@types/file-saver": "2.0.5",
     "@types/graphlib": "2.1.8",
