--- a/bin/litellm-config.yaml
+++ b/bin/litellm-config.yaml
@@ -3,3 +3,7 @@ model_list:
     litellm_params:
       model: claude-3-7-sonnet-20250219
       api_key: "os.environ/ANTHROPIC_API_KEY"
+  - model_name: claude-4
+    litellm_params:
+      model: claude-opus-4-1-20250805
+      api_key: "os.environ/ANTHROPIC_API_KEY"
