fix(helm-chart): replace regex with wildcard in the ingress rules (#4011)
### What changes were proposed in this PR?
To deploy Texera on AWS, we need to use ALB instead of Nginx. ALB
currently does not support regex in the paths and only support
wildcards. This PR modifies our Kubernetes Ingress resource definitions,
replacing regex-based path matching with wildcard (*) matching. [[AWS
ALB
Annotations](https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/)]

### Any related issues, documentation, discussions?
It has not been filed as issue since it only affect AWS deployments,
however, the previous [PR](https://github.com/apache/texera/pull/3652)
regarding Ingress ClassName shows our need to be able to switch Nginx
with other proxifiers for different deployments.

### How was this PR tested?
Ran Kubernetes locally, and also in bootcamp at the beginning of the
summer we did this and worked fine.

--- a/bin/k8s/values.yaml
+++ b/bin/k8s/values.yaml
@@ -341,7 +341,7 @@ ingressPaths:
     - path: /wsapi/workflow-websocket
       serviceName: envoy-svc
       servicePort: 10000
-    - path: /api/executions/[0-9]+/stats/[0-9]+$
+    - path: /api/executions/*/stats/*
       pathType: ImplementationSpecific
       serviceName: envoy-svc
       servicePort: 10000
